// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users Shipping Addresses Should able to add multiple shipping addresses 1`] = `
Object {
  "address": "Br. Guntur Kemenuh Blahbatuh Gianyar",
  "city": "Gianyar",
  "country": "Indonesia",
  "createdAt": Any<String>,
  "deleted": false,
  "id": Any<Number>,
  "updatedAt": Any<String>,
  "zipCode": "80281",
}
`;

exports[`Users Shipping Addresses Should able to add multiple shipping addresses 2`] = `
Object {
  "address": "Br. Kemuning Blahbatuh Gianyar",
  "city": "Gianyar",
  "country": "Indonesia",
  "createdAt": Any<String>,
  "deleted": false,
  "id": Any<Number>,
  "updatedAt": Any<String>,
  "zipCode": "80281",
}
`;
